--- a/css/style.css
+++ b/css/style.css
@@ -32,13 +32,86 @@ ul {
 section {
     min-height: 100vh;
     display: block;
-    padding: 0 30px;
     opacity: 1;
     background-color: var(--bg-gray);
+    padding: 100px 0;
+    margin: 0 80px;
 }
 
-a{
+a {
     color: white;
+}
+
+.container {
+    max-width: 1100px;
+    width: 100%;
+    margin: auto;
+    padding-top: 60px;
+    padding-bottom: 70px;
+}
+
+.section-title {
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-bottom: 60px;
+}
+
+.section-title h2 {
+    font-size: 40px;
+    color: black;
+    font-weight: 700;
+    position: relative;
+}
+
+.section-title h2::before {
+    content: "";
+    height: 4px;
+    width: 50px;
+    background-color: var(--bg-darkgray);
+    position: absolute;
+    top: 100%;
+    left: 0;
+}
+
+.section-title h2::after {
+    content: "";
+    height: 4px;
+    width: 25px;
+    background-color: var(--bg-darkgray);
+    position: absolute;
+    top: 100%;
+    left: 0;
+    margin-top: 8px;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -15px;
+    position: relative;
+}
+
+.hire-btn {
+    font-size: 16px;
+    font-weight: 500;
+    padding: 12px 35px;
+    background: var(--bg-black);
+    color: white;
+    display: inline-block;
+    white-space: nowrap;
+    border: none;
+    border-radius: 40px;
+    transition: all 0.5s ease;
+}
+
+.hire-btn:hover {
+    transform: scale(1.05);
+    background: var(--bg-darkgray);
+    color: white;
+}
+
+.shadow-dark {
+    box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
 }
 
 /* Header Start */
@@ -46,6 +119,8 @@ a{
     width: 98%;
     background: var(--bg-darkgray);
     margin: 10px;
+    position: fixed;
+    z-index: 10;
 }
 
 .avatar {
@@ -79,53 +154,117 @@ a{
 
 /* Header End */
 
-/*  */
+/* Landing Page Start */
+
+.home {
+    color: black;
+    display: flex;
+    min-height: 100vh;
+}
+
+.hello {
+    font-size: 28px;
+    margin: 15px 0;
+}
+
+.hello span {
+    font-size: 30px;
+    font-weight: 700;
+    color: white;
+}
+
+h3.my-hobby {
+    font-size: 30px;
+    margin: 15px 0;
+}
+
+.typing {
+    color: var(--bg-darkgray);
+}
+
+.home-info{
+    text-align: justify;
+    padding: 100px;
+}
+
+.home-info p {
+    margin-bottom: 70px;
+    font-size: 20px;
+    color: black;
+}
+
+.home-img img {
+    height: 300px;
+    margin: auto;
+    border-radius: 5px;
+}
+
+/* Landing Page End */
+
+
+
 
 /* Responisive Web Start*/
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
+    body{
+        overflow-x: hidden;
+    }
+
     .master-head {
         display: block;
         align-items: center;
         justify-content: center;
         top: 0;
         left: 0;
+        width: 95%;
     }
 
     .header-left {
         width: 95%;
         text-align: center;
     }
-    
+
     .header-right {
         width: 95%;
         text-align: center;
     }
 
-    .nav-list{
+    .nav-list {
         margin: 0 10px;
+    }
+
+    section{
+        max-width: 98%;
+        margin: 0 5px;
+    }
+
+    .home-info{
+        width: 80%;
+        padding: 0;
+    }
+
+    .row{
+        width: 98%;
+        margin: 0 10px;
+    }
+
+    .home-info p{
+        margin-bottom: 10px;
     }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-
-}
+@media only screen and (min-width: 600px) {}
 
 /* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-
-}
+@media only screen and (min-width: 768px) {}
 
 /* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-
-}
+@media only screen and (min-width: 992px) {}
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-
-}
+@media only screen and (min-width: 1200px) {}
 
 /* Responisive Web End*/
