--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ a {
 .section-title {
     flex: 0 0 100%;
     max-width: 100%;
-    margin-bottom: 60px;
+    margin-bottom: 20px;
 }
 
 .section-title h2 {
@@ -108,10 +108,6 @@ a {
     transform: scale(1.05);
     background: var(--bg-darkgray);
     color: white;
-}
-
-.shadow-dark {
-    box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
 }
 
 /* Header Start */
@@ -182,7 +178,7 @@ h3.my-hobby {
     color: var(--bg-darkgray);
 }
 
-.home-info{
+.home-info {
     text-align: justify;
     padding: 100px;
 }
@@ -201,14 +197,205 @@ h3.my-hobby {
 
 /* Landing Page End */
 
+/* About Start */
+.about-content {
+    flex: 0 0 100%;
+    max-width: 100%;
+}
 
+.about-text {
+    flex: 0 0 100%;
+    max-width: 100%;
+}
 
+.about-text h3 {
+    font-size: 24px;
+    margin-bottom: 15px;
+    font-weight: 700;
+    color: black;
+    margin-left: 20px;
+}
+
+.about-text span {
+    color: white;
+}
+
+.about-text p {
+    font-size: 16px;
+    line-height: 25px;
+    color: black;
+    margin-left: 20px;
+}
+
+.personal-info {
+    flex: 0 0 50%;
+    max-width: 50%;
+    margin-top: 40px;
+    margin-left: 50px;
+}
+
+.info-item {
+    flex: 0 0 50%;
+    max-width: 50%;
+}
+
+.info-item p {
+    font-weight: 600;
+    padding: 10px 0;
+    font-size: 16px;
+    color: white;
+    border-bottom: 1px solid var(--bg-darkgray);
+}
+
+.info-item p span,
+.info-item p a {
+    font-weight: 400;
+    color: white;
+    margin-left: 4px;
+    display: inline-block;
+}
+
+.buttons {
+    margin-top: 30px;
+}
+
+.buttons .hire-btn {
+    margin-right: 15px;
+    margin-top: 10px;
+}
+
+.skills {
+    flex: 0 0 40%;
+    max-width: 40%;
+    margin-top: 40px;
+    padding-left: 60px;
+}
+
+.skill-item {
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+
+.skill-item h5 {
+    line-height: 40px;
+    font-weight: 600;
+    font-size: 16px;
+    color: white;
+    text-transform: capitalize;
+}
+
+.education {
+    flex: 0 0 45%;
+    max-width: 45%;
+    margin: 30px;
+    float: left;
+    background-color: var(--bg-darkgray);
+    height: 500px;
+    padding-top: 10px;
+    border-radius: 10px;
+}
+
+.certification {
+    flex: 0 0 45%;
+    max-width: 45%;
+    margin-top: 30px;
+    float: right;
+    background-color: var(--bg-darkgray);
+    height: 500px;
+    padding-top: 10px;
+    border-radius: 10px;
+}
+
+.title {
+    font-size: 24px;
+    margin-bottom: 30px;
+    font-weight: 700;
+    color: white;
+    margin-left: 20px;
+}
+
+.timeline-box {
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+
+.timeline-item {
+    width: 90%;
+    position: relative;
+    margin-left: 25px;
+    padding-left: 20px;
+    display: block;
+}
+
+.timeline-item::before {
+    content: "";
+    width: 1px;
+    position: absolute;
+    height: 100%;
+    left: 7px;
+    top: 0;
+    bottom: 0;
+    background-color: white;
+}
+
+.circle-dot {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    background-color: white;
+}
+
+.timeline-date {
+    font-weight: 400;
+    font-size: 14px;
+    margin-bottom: 12px;
+    color: white;
+}
+
+.timeline-date i {
+    margin-right: 5px;
+    font-size: 20px;
+}
+
+.timeline-title {
+    font-weight: 700;
+    font-size: 18px;
+    text-transform: capitalize;
+    color: white;
+}
+
+.timeline-text {
+    line-height: 25px;
+    font-size: 16px;
+    text-align: justify;
+    color: white;
+}
+
+/* About End */
+
+/* Project Start */
+
+.card{
+    background-color: var(--bg-yellow);
+    margin: 30px;
+    height: 382px;
+}
+
+.card-container{
+    position: absolute;
+    padding: 2px 50px;
+}
+
+/* Project End */
 
 /* Responisive Web Start*/
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-    body{
+    body {
         overflow-x: hidden;
     }
 
@@ -235,24 +422,59 @@ h3.my-hobby {
         margin: 0 10px;
     }
 
-    section{
+    section {
         max-width: 98%;
         margin: 0 5px;
+        padding: 0;
     }
 
-    .home-info{
+    .home-info {
         width: 80%;
         padding: 0;
     }
 
-    .row{
+    .row {
         width: 98%;
         margin: 0 10px;
     }
 
-    .home-info p{
+    .home-info p {
         margin-bottom: 10px;
     }
+
+    .info-item {
+        padding: 10px;
+    }
+
+    .skills{
+        text-align: center;
+        padding-left: 0;
+        margin-left: 80px;
+    }
+
+    .education{
+        max-width: 100%;
+        margin: 0;
+        padding: 40px;
+        height: 750px;
+    }
+
+    .certification{
+        max-width: 100%;
+        margin: 10px 0;
+        padding: 71px;
+        height: 750px;
+        float: left;
+    }
+
+    .timeline-item {
+        width: 100%;
+    }
+
+    .card{
+        margin: 10px;
+    }
+
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
