--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ a {
     width: 100%;
     margin: auto;
     padding-top: 60px;
-    padding-bottom: 70px;
+    padding-bottom: 10px;
 }
 
 .section-title {
@@ -378,18 +378,122 @@ h3.my-hobby {
 
 /* Project Start */
 
-.card{
+.card {
     background-color: var(--bg-yellow);
     margin: 30px;
     height: 382px;
 }
 
-.card-container{
+.card-container {
     position: absolute;
     padding: 2px 50px;
 }
 
 /* Project End */
+
+/* Contact Start */
+
+.contact-title {
+    color: white;
+    text-align: center;
+    font-size: 25px;
+    margin: 20px 0;
+}
+
+.contact-sub-title {
+    text-align: center;
+    font-size: 15px;
+    margin-bottom: 60px;
+    color: white;
+}
+
+.contact-info-item {
+    flex: 0 0 25%;
+    max-width: 25%;
+    text-align: center;
+    margin-bottom: 60px;
+    color: white;
+}
+
+.contact-info-item .icon {
+    display: inline-block;
+}
+
+.contact-info-item .icon i {
+    font-size: 25px;
+    color: var(--bg-black);
+}
+
+.contact-info-item h4 {
+    font-size: 18px;
+    font-weight: 700;
+    text-transform: capitalize;
+    margin: 15px 0 5px;
+}
+
+.contact-info-item p {
+    color: white;
+    font-size: 16px;
+    line-height: 25px;
+    font-weight: 400;
+}
+
+.contact-form {
+    flex: 0 0 98%;
+    max-width: 98%;
+}
+
+.col-6 {
+    flex: 0 0 47%;
+    max-width: 47%;
+    margin-left: 20px;
+}
+
+.col-12 {
+    flex: 0 0 98%;
+    max-width: 98%;
+    margin-left: 20px;
+}
+
+.form-item {
+    margin-bottom: 30px;
+}
+
+.form-control {
+    width: 100%;
+    height: 50px;
+    border-radius: 25px;
+    border: 1px solid var(--bg-black);
+    padding: 10px 25px;
+    font-size: 16px;
+    transition: all 0.5s ease;
+}
+
+.form-control:focus {
+    box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
+}
+
+textarea.form-control {
+    height: 140px;
+}
+
+.a-tag{
+    color: blue;
+}
+
+/* Contact End */
+
+/* Footer Start */
+
+footer{
+    margin: 10px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    color: white;
+}
+
+/* Footer End */
 
 /* Responisive Web Start*/
 
@@ -446,20 +550,20 @@ h3.my-hobby {
         padding: 10px;
     }
 
-    .skills{
+    .skills {
         text-align: center;
         padding-left: 0;
         margin-left: 80px;
     }
 
-    .education{
+    .education {
         max-width: 100%;
         margin: 0;
         padding: 40px;
         height: 750px;
     }
 
-    .certification{
+    .certification {
         max-width: 100%;
         margin: 10px 0;
         padding: 71px;
@@ -471,8 +575,24 @@ h3.my-hobby {
         width: 100%;
     }
 
-    .card{
+    .card {
         margin: 10px;
+    }
+
+    .col-6{
+        flex: 0 0 43%;
+        max-width: 43%;
+    }
+
+    .col-12{
+        flex: 0 0 90%;
+        max-width: 90%;
+    }
+
+    .contact-info-item {
+        flex: 0 0 40%;
+        max-width: 40%;
+        margin: 15px;
     }
 
 }
